testsuite/gnatprove/tests/522__illegal_unhide_package_body/test.out
bad_compil.adb:2:04: error: the entity with the "Unhide_Info" annotation shall not be a compilation unit
bad_compil.adb:2:04: error: wrong entity argument for "pragma Annotate (GNATprove, Unhide_Info, "Package_Body"[, ...])"
test.adb:6:07: error: expected a package body
test.adb:6:07: error: wrong entity argument for aspect "Annotate => (GNATprove, Unhide_Info, "Package_Body"[, ...])"
test.adb:18:07: error: expected 3 arguments
test.adb:18:07: error: wrong number of arguments in "pragma Annotate (GNATprove, Unhide_Info, "Package_Body"[, ...])"
test.adb:25:07: error: "pragma Annotate (GNATprove, Unhide_Info, "Package_Body"[, ...])" shall be located at the top of the declarations of a package body
test.adb:25:07: error: incorrect placement for "pragma Annotate (GNATprove, Unhide_Info[, ...])"
test.adb:39:07: error: "pragma Annotate (GNATprove, Unhide_Info, "Package_Body"[, ...])" shall be located at the top of the declarations of a package body
test.adb:39:07: error: incorrect placement for "pragma Annotate (GNATprove, Unhide_Info[, ...])"
test.adb:49:09: error: "pragma Annotate (GNATprove, Unhide_Info, "Package_Body"[, ...])" shall be located at the top of the declarations of a package body
test.adb:49:09: error: incorrect placement for "pragma Annotate (GNATprove, Unhide_Info[, ...])"
test.adb:61:07: error: "Hide_Info" annotation cannot be applied to package bodies
test.adb:61:07: error: unexpected third argument for "pragma Annotate (GNATprove, Hide_Info[, ...])"
gnatprove: error during flow analysis and proof
